--- a/style.css
+++ b/style.css
@@ -2,14 +2,71 @@
     padding: 0;
     margin: 0;
 }
+@font-face {
+    font-family: "Nueue";
+    src: url(./assets/NeueMontreal-Medium.otf);
+}
 header{
     text-align: center;
 }
+nav{
+    width: 25%;
+    left: 33%;
+    position: fixed;
+    margin: 2%  5% 5%  5%;
+    border-radius: 30px;
+    background-color: rgba(244,242, 240, 0.8);
+    z-index: 9;
+    backdrop-filter: blur(5px); /* Blur effect  */
+    font-family: "Nueue";
+}
+.shop{
+    color: white;
+    background-color: black;
+    position: fixed;
+    border-radius: 30px;
+    left: 46.8%;
+    bottom: 1%;
+    z-index: 99;
+    padding: 0.7%  0.3% 1% 1.3%;
+    display: flex;
+    width: 5%;
+    margin-bottom: 10px;
+}
+.shopIcon{
+    width: 25%;
+}
+span{
+    margin-top: 0%;
+    margin-left: 5%;
+}
+.divider{
+    height: 150px;
+}
+nav button{
+    padding: 3% 3% 3% 3%;
+    margin: 3%;
+    border: transparent;
+    background-color: transparent;
+}
+
+nav button:hover{
+    background-color: white;
+    border-radius: 15px;
+}
+.active, nav button:hover {
+    background-color: white;
+    border-radius: 15px;
+  }
+nav a{
+    text-decoration: none;
+    background-color: rgba(244 242 240 0.5);
+}
 .header-main-text{
-    padding: 8% 3% 8% 3%;
+    padding: 0% 20% 5% 20%;
 }
 .header-main-text h1{
-    font-size: 80px;
+    font-size: 75px;
     font-family: "Neue Montreal Medium", serif;
     font-weight: 600;
 }
@@ -17,22 +74,48 @@ img{
     width: 100%;
     display: block;
 }
+img{
+    filter: blur(0); /* Initial state (no blur) */
+    transition: filter 0.9s ease; /* Smooth transition */
+}
+.imgContainer img:hover {
+    filter: blur(3px); /* Blur effect on hover */
+}
 .imgContainer{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3,450px);
+    padding: 0% 2%;
 }
 .imgDivs{
-    margin: 3% 5% 0% 5%;
+    margin: 3% 2%;
+    padding-top: 3%;
 }
 .imgDivs img{
     border-radius: 13px;
 }
 /*footer*/
+footer{
+    padding: 0% 5% 0% 2%;
+}
 footer img{
     width: 18%;
     margin: 4%;
+    animation: rotating 3s linear infinite;
 }
+@keyframes rotating {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
+  .rotating {
+    animation: rotating 2s linear infinite;
+  }
+  
 footer p{
     position: relative;
     top: 29%;
@@ -69,37 +152,15 @@ footer{
     padding-top: 9%;
 }
 
-/*nav*/
-nav{
-    width: 20%;
-    position: relative;
-    left: 32%;
-    background-color: #f4f2f0;
-    margin: 5%;
-    border-radius: 20px;
-}
-nav button{
-    padding: 3% 3% 3% 3%;
-    margin: 3%;
-    border: transparent;
-}
 
-nav button:hover{
-    background-color: white;
-    border-radius: 15px;
-}
-nav a{
-    text-decoration: none;
-
-}
 /*header-main-text button*/
 .header-main-text button{
-    padding: 0.7%;
-    margin:2%  0.3% 0.3% 0.3%;
-    border-radius: 12px;
+    padding: 1% 1.5%;
+    margin:6%  0.6% 0.3% 0.6%;
+    border-radius: 15px;
     border: transparent;
     background-color: #f4f2f0;
-    font-size: medium;
+    font-size: 14px;
 }
 #expertise{
     background-color: transparent;
