--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ nav button{
     border: transparent;
     background-color: transparent;
 }
-
 nav button:hover{
     background-color: white;
     border-radius: 15px;
@@ -93,6 +92,9 @@ img{
 }
 .imgDivs img{
     border-radius: 13px;
+}
+.nameTags{
+    display: none;
 }
 /*footer*/
 footer{
@@ -170,7 +172,6 @@ footer{
 }
 
 @media screen  and (max-width:480px){
-
     *{
         padding: 2%;
         margin: 0;
@@ -182,37 +183,61 @@ footer{
         padding: 8% 3% 8% 3%;
     }
     .header-main-text h1{
-        font-size: 30px;
+        font-size: 35px;
         font-family: "Neue Montreal Medium", serif;
         font-weight: 600;
-        margin-bottom: 10%;
-        padding: 3% 3% 0% 3%;
+        margin-bottom: 6%;
+        padding: 2% 0% 0% 0%;
+    }
+    br{
+        display: none;
+    }
+    .nameTags{
+        display: block;
+    }
+    .divider{
+        height:80px;
     }
     img{
         width: 100%;
         display: block;
     }
     .imgContainer{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(6,200px);
+        display:block;
+        width: 100%;
+        padding: 0px;
+    }
+    main{
+        padding: 0px;
+    }
+    .shop{
+        display: none;
     }
     .imgDivs{
-        margin: 3% 5% 0% 5%;
+        margin:0%;
     }
     .imgDivs img{
         border-radius: 13px;
     }
     /*footer*/
+    footer{
+        margin: 90px 0px;
+        padding: 10px 10px;
+    }
     footer img{
         width: 10%;
-        margin: 4%;
-        display: none;
+        margin: 2%;
+        display: block;
+        position: relative;
+        left: 43%;
+    }
+    footer br{
+        display: block;
     }
     footer p{
         position: relative;
         top: 29%;
-        display: none;
+        display: block;
     }
     .social-contact{
         display: block;
@@ -228,12 +253,14 @@ footer{
     }
     .social-logo{
         display: block;
+        text-align: center;
+        margin-top: 15%;
     }
     
     footer h2{
-        text-align: center;
-        font-size:34px;
-        margin-bottom: 10%;
+        padding: 0px;
+        font-size:31px;
+        margin-bottom: 5% 10%;
     }
     footer a{
         text-decoration: none;
@@ -248,12 +275,14 @@ footer{
     
     /*nav*/
     nav{
-        width: 90%;
-        position: relative;
+        width: 85%;
+        position: fixed;
         left: 0%;
-        background-color: #f4f2f0;
-        margin: 8% 5% 8% 5%;
-        border-radius: 20px;
+        background-color: rgba(244,242, 240, 0.8);
+        margin: 1.4% 7% 5% 6%;
+        border-radius: 30px;
+        backdrop-filter: blur(5px); /* Blur effect  */
+        z-index: 9;
     }
     nav button{
         padding: 3% 3% 3% 3%;
@@ -280,4 +309,190 @@ footer{
         text-decoration: none;
     }
     
+}
+@media screen  and (min-width : 480px) and (max-width : 768px){
+    *{
+        padding: 0;
+        margin: 0;
+    }
+    @font-face {
+        font-family: "Nueue";
+        src: url(./assets/NeueMontreal-Medium.otf);
+    }
+    header{
+        text-align: center;
+    }
+    nav{
+        width: 35%;
+        left: 25%;
+        position: fixed;
+        margin: 2%  5% 5%  5%;
+        border-radius: 30px;
+        background-color: rgba(244,242, 240, 0.8);
+        z-index: 9;
+        backdrop-filter: blur(5px); /* Blur effect  */
+        font-family: "Nueue";
+    }
+    .shop{
+        color: white;
+        background-color: black;
+        position: fixed;
+        border-radius: 30px;
+        left: 46.8%;
+        bottom: 1%;
+        z-index: 99;
+        padding: 0.7%  0.3% 1% 1.3%;
+        display: none;
+        width: 5%;
+        margin-bottom: 10px;
+    }
+    .shopIcon{
+        width: 25%;
+    }
+    span{
+        margin-top: 0%;
+        margin-left: 5%;
+    }
+    .divider{
+        height: 150px;
+    }
+    nav button{
+        padding: 3% 3% 3% 3%;
+        margin: 3%;
+        border: transparent;
+        background-color: transparent;
+    }
+    
+    nav button:hover{
+        background-color: white;
+        border-radius: 15px;
+    }
+    .active, nav button:hover {
+        background-color: white;
+        border-radius: 15px;
+      }
+    nav a{
+        text-decoration: none;
+        background-color: rgba(244 242 240 0.5);
+    }
+    .header-main-text{
+        padding: 0% 5% 5% 5%;
+    }
+    .header-main-text h1{
+        font-size: 35px;
+        font-family: "Neue Montreal Medium", serif;
+        font-weight: 600;
+    }
+    br{
+        display: none;
+    }
+    img{
+        width: 100%;
+        display: block;
+    }
+    img{
+        filter: blur(0); /* Initial state (no blur) */
+        transition: filter 0.9s ease; /* Smooth transition */
+    }
+    .imgContainer img:hover {
+        filter: blur(0px); /* Blur effect on hover */
+    }
+    .imgContainer{
+        display: block;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3,450px);
+        padding: 0% 2%;
+    }
+    .imgDivs{
+        margin: 3% 2%;
+        padding-top: 3%;
+    }
+    .imgDivs img{
+        border-radius: 13px;
+    }
+    .nameTags{
+        display: block;
+    }
+    /*footer*/
+    footer{
+        padding: 0% 5% 15% 2%;
+    }
+    footer br{
+        display: block;
+    }
+    footer img{
+        width: 5%;
+        margin: 2%;
+        animation: rotating 3s linear infinite;
+        position: relative;
+        left: 45%;
+    }
+    @keyframes rotating {
+        from {
+          transform: rotate(0deg);
+        }
+        to {
+          transform: rotate(360deg);
+        }
+      }
+      
+      .rotating {
+        animation: rotating 2s linear infinite;
+      }
+      
+    footer p{
+        position: relative;
+        top: 29%;
+        margin-bottom: 2%;
+    }
+    .social-contact{
+        display: block;
+        text-align: center;
+    }
+    .social-links{
+        position: relative;
+        left: 0%;
+    }
+    
+    .social-links a{
+        margin: 5px;
+        color: black;
+    }
+    .social-logo{
+        display: block;
+    }
+    
+    footer h2{
+        text-align: center;
+        font-size:30px;
+        margin-bottom: 10%;
+    }
+    footer a{
+        text-decoration: none;
+        
+    }
+    .get{
+        color: #acacac;
+    }
+    footer{
+        padding-top: 9%;
+    }
+    
+    
+    /*header-main-text button*/
+    .header-main-text button{
+        padding: 1% 1.5%;
+        margin:6%  0.6% 0.3% 0.6%;
+        border-radius: 15px;
+        border: transparent;
+        background-color: #f4f2f0;
+        font-size: 14px;
+        display: none;
+    }
+    #expertise{
+        background-color: transparent;
+    }
+    .header-main-text button a{
+        text-decoration: none;
+    }
 }
