--- a/style.css
+++ b/style.css
@@ -1,24 +1,28 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: "Nueue" !important;
 }
 @font-face {
     font-family: "Nueue";
-    src: url(./assets/NeueMontreal-Medium.otf);
+    src: url("./assets/NeueMontreal-Regular.otf") format("otf") ;
 }
 header{
     text-align: center;
 }
 nav{
-    width: 25%;
+    width: 23%;
     left: 33%;
     position: fixed;
-    margin: 2%  5% 5%  5%;
+    margin: 2.4%  5% 5%  5%;
     border-radius: 30px;
     background-color: rgba(244,242, 240, 0.8);
     z-index: 9;
     backdrop-filter: blur(5px); /* Blur effect  */
     font-family: "Nueue";
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 4px;
 }
 .shop{
     color: white;
@@ -43,19 +47,24 @@ span{
 .divider{
     height: 150px;
 }
+/* .home{
+    background-color: white;
+    border-radius: 20px;  
+} */
 nav button{
-    padding: 3% 3% 3% 3%;
-    margin: 3%;
+    padding: 10px 20px;
+    margin: 3px 0px;
     border: transparent;
     background-color: transparent;
+    font-size: 16px;
 }
 nav button:hover{
     background-color: white;
-    border-radius: 15px;
+    border-radius: 20px;
 }
 .active, nav button:hover {
     background-color: white;
-    border-radius: 15px;
+    border-radius: 20px;
   }
 nav a{
     text-decoration: none;
@@ -66,8 +75,7 @@ nav a{
 }
 .header-main-text h1{
     font-size: 75px;
-    font-family: "Neue Montreal Medium", serif;
-    font-weight: 600;
+    font-family: "Nueue";
 }
 img{
     width: 100%;
@@ -170,11 +178,17 @@ footer{
 .header-main-text button a{
     text-decoration: none;
 }
+.breakponitTAb{
+    display: none;
+}
 
 @media screen  and (max-width:480px){
     *{
         padding: 2%;
         margin: 0;
+    }
+    .breakponitTAb{
+        display: none;
     }
     header{
         text-align: center;
@@ -184,7 +198,7 @@ footer{
     }
     .header-main-text h1{
         font-size: 35px;
-        font-family: "Neue Montreal Medium", serif;
+        font-family: "Nueue";
         font-weight: 600;
         margin-bottom: 6%;
         padding: 2% 0% 0% 0%;
@@ -283,21 +297,34 @@ footer{
         border-radius: 30px;
         backdrop-filter: blur(5px); /* Blur effect  */
         z-index: 9;
+        font-family: "Nueue";
+        display: flex;
+        justify-content: space-between;
+        padding: 0px 4px;
     }
     nav button{
-        padding: 3% 3% 3% 3%;
-        margin: 1%;
+        padding: 10px 20px;
+        margin: 3px 0px;
         border: transparent;
+        background-color: transparent;
     }
     
     nav button:hover{
         background-color: white;
-        border-radius: 15px;
+        border-radius: 20px;
     }
     nav a{
         text-decoration: none;
     
     }
+    .active, nav button:hover {
+        background-color: white;
+        border-radius: 20px;
+    } 
+    .home{
+        background-color: white;
+        border-radius: 20px;  
+    } 
     /*header-main-text button*/
     .header-main-text button{
         display: none;
@@ -314,6 +341,9 @@ footer{
     *{
         padding: 0;
         margin: 0;
+    }
+    .breakponitTAb{
+        display: none;
     }
     @font-face {
         font-family: "Nueue";
@@ -332,6 +362,9 @@ footer{
         z-index: 9;
         backdrop-filter: blur(5px); /* Blur effect  */
         font-family: "Nueue";
+        display: flex;
+        justify-content: space-between;
+        padding: 0px 4px;
     }
     .shop{
         color: white;
@@ -357,15 +390,16 @@ footer{
         height: 150px;
     }
     nav button{
-        padding: 3% 3% 3% 3%;
-        margin: 3%;
+        padding: 10px 20px;
+        margin: 3px 0px;
         border: transparent;
         background-color: transparent;
+        font-size: 16px;
     }
     
     nav button:hover{
         background-color: white;
-        border-radius: 15px;
+        border-radius: 20px;
     }
     .active, nav button:hover {
         background-color: white;
@@ -375,13 +409,18 @@ footer{
         text-decoration: none;
         background-color: rgba(244 242 240 0.5);
     }
+    .active, nav button:hover {
+        background-color: white;
+        border-radius: 20px;
+    }
+
     .header-main-text{
         padding: 0% 5% 5% 5%;
     }
     .header-main-text h1{
         font-size: 35px;
-        font-family: "Neue Montreal Medium", serif;
-        font-weight: 600;
+        font-family: "Nueue";
+        font-weight: lighter;
     }
     br{
         display: none;
@@ -494,5 +533,202 @@ footer{
     }
     .header-main-text button a{
         text-decoration: none;
+    }
+}
+@media screen  and (min-width : 769px) and (max-width : 1024px){
+    header{
+        text-align: center;
+    }
+    nav{
+        width: 25%;
+        left: 33%;
+        position: fixed;
+        margin: 2%  5% 5%  5%;
+        border-radius: 30px;
+        background-color: rgba(244,242, 240, 0.8);
+        z-index: 9;
+        backdrop-filter: blur(5px); /* Blur effect  */
+        font-family: "Nueue";
+    }
+    .shop{
+        color: white;
+        background-color: black;
+        position: fixed;
+        border-radius: 30px;
+        left: 46.8%;
+        bottom: 1%;
+        z-index: 99;
+        padding: 0.7%  0.3% 1% 1.3%;
+        display: flex;
+        width: 5%;
+        display: none;
+        margin-bottom: 10px;
+    }
+    .shopIcon{
+        width: 25%;
+    }
+    span{
+        margin-top: 0%;
+        margin-left: 5%;
+    }
+    .divider{
+        height: 150px;
+    }
+    nav button{
+        padding: 3% 3% 3% 3%;
+        margin: 3%;
+        border: transparent;
+        background-color: transparent;
+    }
+    nav button:hover{
+        background-color: white;
+        border-radius: 15px;
+    }
+    .active, nav button:hover {
+        background-color: white;
+        border-radius: 15px;
+      }
+    nav a{
+        text-decoration: none;
+        background-color: rgba(244 242 240 0.5);
+    }
+    .header-main-text{
+        padding: 0% 10% 5% 10%;
+        margin-top: 80px;
+    }
+    .breakponitmobile{
+        display: none;
+    }
+    .breakponitTAb{
+        display: block;
+    }
+    .header-main-text h1{
+        font-size: 55px;
+        font-family: "Nueue";
+    }
+    img{
+        width: 100%;
+        display: block;
+    }
+    img{
+        filter: blur(0); /* Initial state (no blur) */
+        transition: filter 0.9s ease; /* Smooth transition */
+    }
+    .imgContainer img:hover {
+        filter: blur(3px); /* Blur effect on hover */
+    }
+    .imgContainer{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3,450px);
+        padding: 0% 2%;
+    }
+    .imgDivs{
+        margin: 3% 2%;
+        padding-top: 3%;
+    }
+    .imgDivs img{
+        border-radius: 13px;
+    }
+    .nameTags{
+        display: none;
+    }
+    /*footer*/
+    footer{
+        padding: 0% 5% 0% 2%;
+    }
+    footer img{
+        width: 18%;
+        margin: 4%;
+        animation: rotating 3s linear infinite;
+    }
+    @keyframes rotating {
+        from {
+          transform: rotate(0deg);
+        }
+        to {
+          transform: rotate(360deg);
+        }
+      }
+      
+      .rotating {
+        animation: rotating 2s linear infinite;
+      }
+      
+    footer p{
+        position: relative;
+        top: 29%;
+    }
+    .social-contact{
+        display: flex;
+    }
+    .social-links{
+        position: relative;
+        left: 65%;
+    }
+    
+    .social-links a{
+        margin: 5px;
+        color: black;
+    }
+    .social-logo{
+        display: flex;
+    }
+    
+    footer h2{
+        text-align: center;
+        font-size:34px;
+        margin-bottom: 10%;
+    }
+    footer a{
+        text-decoration: none;
+        
+    }
+    .get{
+        color: #acacac;
+    }
+    footer{
+        padding-top: 9%;
+    }
+    
+    
+    /*header-main-text button*/
+    .header-main-text button{
+        padding: 1% 1.5%;
+        margin:6%  0.6% 0.3% 0.6%;
+        border-radius: 15px;
+        border: transparent;
+        background-color: #f4f2f0;
+        font-size: 14px;
+    }
+    #expertise{
+        background-color: transparent;
+    }
+    .header-main-text button a{
+        text-decoration: none;
+    }
+}
+@media screen  and (min-width : 1024px) and (max-width : 1420px){
+    .header-main-text{
+        padding: 0% 10% 2% 10%;
+        margin: 20px 0px 0px 0px;
+        font-family: "Nueue";
+    }
+
+    .breakponitmobile{
+        display: block;
+    }
+    .breakponitTAb{
+        display: none;
+    }
+    .header-main-text h1{
+        font-size: 75px;
+        font-family: "Nueue";
+    }
+    .shop{
+        display: none;
+    }
+    nav{
+        font-family: "Nueue";
     }
 }
